739889: TISSTRT-1597: Delete Wishlist Pop up distorted in dev2 environmnet issue fix. TISSTRT-1600: CVV number error message in dev2 enviroment is not similar with the requirement issue fix. UF-263: PDP size select loader change.

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -26846,6 +26846,20 @@ li#savedCVVError{
     margin:20px 10px 10px 10px;
     vertical-align: top;
 }
+/*TISSTRT-1597 fix start*/
+#deleteConfirmation .deleteWlConfirmationNo{
+    border-radius: 0;
+    border: 0 !important;
+    margin:20px 10px 10px 10px !important;
+    opacity: 1; 
+    position: static;
+}
+#deleteConfirmation .modal-dialog{
+	padding: 0;
+    border: 0;
+    border-radius: 0;
+}
+/*TISSTRT-1597 fix end*/
 .product-listing.product-grid .product-item.heroProducts {
 	width: 100%;
 }
@@ -64693,7 +64707,8 @@ margin: 0;
     background-image: url(../images/select-arrow-new.png);
     background-position: 98%;
 }
-.error-message#cvvError, .error-message#cvvErrorEmi {
+/*TISSTRT-1600*/
+.error-message#cvvError, .error-message#cvvErrorEmi, .error-message#cvvErrorDc {
     margin-left:32px;
 }
 .cart.wrapper.checkout-payment .left-block .payments.tab-view .tabs .product-block li.item .cvv{
@@ -65314,7 +65329,8 @@ div#savedEMICard .credit-card-group .right-align-form input.cvvValdiation.securi
 .cart.wrapper.checkout-payment .left-block .payments.tab-view .new-card fieldset .half label, .cart.wrapper.checkout-payment .left-block .payments.tab-view .new-card fieldset .full label, .cart.wrapper.checkout-payment .left-block .payments.tab-view .tabs .product-block li.item .cvv label {
     padding-top: 6px;
 }
-.error-message#cvvError, .error-message#cvvErrorEmi {
+/*TISSTRT-1600*/
+.error-message#cvvError, .error-message#cvvErrorEmi, .error-message#cvvErrorDc {
     margin-left: 4px;
 }
 .cart.wrapper.checkout-payment .left-block .payments.tab-view .tabs .product-block.emi .bank-select p.emi-plan {
